# ip-gacha-roll

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yaml  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.bot.yaml  ci.yaml
shared/: Cargo.toml
shared/src/: keen_utils.rs  lib.rs  net_utils.rs
src/: App.tsx  main.tsx  styles.css
src-bot/: .gitignore  Cargo.toml  Dockerfile  README.md
src-bot/deploy/: compose.yaml  deploy.yaml
src-bot/src/: main.rs  nat.rs  roll.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.py  auth.rs  check_nat.rs  keen_client.rs  lib.rs  main.rs  migrations.rs  settings.rs
src-tauri/src/shared/: keen_utils.rs  mod.rs  net_utils.rs
src/components/: AnimeWrapper.tsx  Check.tsx  CheckNetwork.tsx  Interface.tsx  Logs.tsx  Roll.tsx  Settings.tsx
src/db/: logs.ts  settings.ts
