[package]
name = "ip-gacha-roll-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
surge-ping = "0.8.2"
anyhow = "1.0.98"
reqwest = { version = "0.12.15", features = ["blocking", "json", "cookies"] }
md5 = "0.7.0"
sha2 = "0.10.8"
serde_json = "1"
